--- a/style.css
+++ b/style.css
@@ -329,6 +329,16 @@ h1 {
     background-color:#35af4a;
 }
 
+.footer{
+    width: 100%;
+    color:#FFFFFF;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+    background-color: #388bc5; 
+}
+
 @media (max-width:1000px) {
     .pizza-area {
         grid-template-columns: repeat(2, 1fr);
